# avra-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release-plz.yml  rust.yml
includes/std/: convert.inc  io.inc  ram.inc  serial.inc  stack.inc  vectors.inc
includes/std/vectors/: m48.inc
materials/: assembler_source.md
src/: context.rs  device.rs  directive.rs  document.rs  expr.rs  lib.rs  parser.rs  utility.rs  writer.rs
src/app/: main.rs  opt.rs
src/builder/: mod.rs  pass0.rs  pass1.rs  pass2.rs
src/instruction/: mod.rs  operation.rs  register.rs
tests/: builder_simple.asm  include_path_test.asm  include_test.asm  include_test.inc
tests/includes/: include_test_2.inc
