[package]
name = "avra-rs"
version = "0.2.1"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
description = "Assembler for Microchip(near Atmel) AVR microcontroller family"
edition = "2018"
license = "Apache-2.0"
keywords = ["avr", "assembly", "assembler", "asm"]
categories = ["embedded"]
readme = "README.md"
repository = "https://github.com/no111u3/avra-rs"

[[bin]]
name = "avra-rs"
path = "src/app/main.rs"

[lib]
name = "avra_lib"
path = "src/lib.rs"

[dependencies]
peg = "0.6"
byteorder = "1.3"
failure = "0.1"
strum = "0.17"
strum_macros = "0.17"
ihex = "1.1"
maplit = "1.0"
lazy_static = "1.4"
clap = "2.33"
structopt = "0.3"
walkdir = "2.3"
dirs = "2.0"

[build-dependencies]
walkdir = "2.3"
dirs = "2.0"
