[package]
name = "avra-rs"
version = "0.3.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
description = "Assembler for Microchip(similar to Atmel) AVR microcontroller family"
edition = "2021"
license = "Apache-2.0"
keywords = ["avr", "assembly", "assembler", "asm"]
categories = ["embedded"]
readme = "README.md"
repository = "https://github.com/no111u3/avra-rs"

[[bin]]
name = "avra-rs"
path = "src/app/main.rs"

[lib]
name = "avra_lib"
path = "src/lib.rs"

[dependencies]
peg = "0.8"
byteorder = "1.5"
failure = "0.1"
strum = "0.26"
strum_macros = "0.26"
ihex = "3.0"
maplit = "1.0"
lazy_static = "1.4"
clap = "4.5"
structopt = "0.3"
walkdir = "2.5"
dirs = "5.0"

[build-dependencies]
checksums = "0.9"
walkdir = "2.5"
dirs = "5.0"

[profile.release]
lto = true
